# Engines
if ENABLE_ENGINE_IRC
ENGINE_IRC = Engine-IRC
endif

if ENABLE_ENGINE_XMPP
ENGINE_XMPP = Engine-XMPP
endif

if ENABLE_ENGINE_OSCAR
ENGINE_OSCAR = Engine-OSCAR
endif

if ENABLE_ENGINE_MSNP
ENGINE_MSNP = Engine-MSNP
endif

if ENABLE_ENGINE_TWITTER
ENGINE_TWITTER = Engine-Twitter
endif

# Frontends
if ENABLE_FRONTEND_GNOME
FRONTEND_GNOME = Frontend-GNOME
endif

if ENABLE_FRONTEND_GNOME_IRC
FRONTEND_GNOME_IRC = Frontend-GNOME-IRC
endif

if ENABLE_FRONTEND_GNOME_XMPP
FRONTEND_GNOME_XMPP = Frontend-GNOME-XMPP
endif

if ENABLE_FRONTEND_STFL
FRONTEND_STFL = Frontend-STFL
endif

if ENABLE_FRONTEND_CURSES
FRONTEND_CURSES = Frontend-Curses
endif

if ENABLE_FRONTEND_SWF
FRONTEND_SWF = Frontend-SWF
endif

if ENABLE_FRONTEND_WPF
#FRONTEND_WPF = Frontend-WPF
endif

if ENABLE_FRONTEND_TEST
FRONTEND_TEST = Frontend-Test
endif

SUBDIRS =	Common \
		Engine \
		$(ENGINE_IRC) \
		$(ENGINE_MSNP) \
		$(ENGINE_OSCAR) \
		$(ENGINE_TWITTER) \
		$(ENGINE_XMPP) \
		Server \
		Frontend \
		$(FRONTEND_GNOME) \
		$(FRONTEND_GNOME_IRC) \
		$(FRONTEND_GNOME_XMPP) \
		$(FRONTEND_STFL) \
		$(FRONTEND_CURSES) \
		$(FRONTEND_SWF) \
		$(FRONTEND_WPF) \
		$(FRONTEND_TEST)
